# pallets

./: Cargo.toml
claims/: Cargo.toml
claims/src/: lib.rs
parentchain/: Cargo.toml
parentchain/test/: Cargo.toml
primitives/claims/: Cargo.toml
primitives/common/: Cargo.toml
primitives/sidechain/: Cargo.toml
primitives/teeracle/: Cargo.toml
primitives/teerex/: Cargo.toml
primitives/types/: Cargo.toml
primitives/utils/: Cargo.toml
sidechain/: Cargo.toml
sidechain/sidechain-block-verification/: Cargo.toml
sidechain/test/: Cargo.toml
teeracle/: Cargo.toml
teerex/: Cargo.toml
teerex/ias-verify/: Cargo.toml
teerex/ias-verify/src/: lib.rs
teerex/sgx-verify/: Cargo.toml
tests-utils/: Cargo.toml
