[workspace]
resolver = "2"
members = [
    "claims",
    "teerex",
    "parentchain",
    "sidechain",
    "teerex/sgx-verify",
    "teeracle",
    "test-utils",
    "xcm-transactor",
    "primitives/claims",
    "primitives/teerex",
    "primitives/teeracle",
    "primitives/common",
    "primitives/xcm-transactor",
]
