[package]
name = "pallet-teeracle"
description = "A pallet to store cryptocurrency market data"
version = "0.1.0"
authors = ["Integritee AG"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/pallets/teeracle/"
license = "Apache-2.0"
edition = "2018"
resolver = "2"

[dependencies]
log = { version = "0.4.14", default-features = false }
hex-literal = { version = "0.3.2", optional = true }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.1.5'

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.27"

[dependencies.frame-system]
default-features = false
package = 'frame-system'
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.27"

[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.27"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.27"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.27"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.27"

[dependencies.substrate-fixed]
default-features = false
git = "https://github.com/encointer/substrate-fixed.git"
package = "substrate-fixed"

## benchmarking stuff
[dependencies.frame-benchmarking]
default-features = false
optional = true
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.27"

[dependencies.timestamp]
default-features = false
package = "pallet-timestamp"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.27"

[dependencies.pallet-teerex]
default-features = false
package = "pallet-teerex"
path = "../teerex"

[dependencies.test-utils]
default-features = false
path = '../tests-utils'

[dev-dependencies.externalities]
package = "sp-externalities"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.27"

[dev-dependencies.sp-keyring]
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.27"

[dev-dependencies.pallet-balances]
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.27"

[dev-dependencies.hex-literal]
version = "0.3.2"

[dependencies.teeracle-primitives]
default-features = false
package = "teeracle-primitives"
path = "../primitives/teeracle"

[features]
default = ['std']
std = [
    'codec/std',
    'log/std',
    'frame-support/std',
    'frame-system/std',
    "pallet-teerex/std",
    'scale-info/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'substrate-fixed/std',
    "teeracle-primitives/std",
    # benchmarking stuff
    "timestamp/std",
    'frame-benchmarking/std',
    "test-utils/std",
]

runtime-benchmarks = [
    'frame-benchmarking',
    "hex-literal",
    "timestamp/runtime-benchmarks"
]
