[package]
name = "test-utils"
description = "A crate for common utilities for tests"
version = "0.1.0"
authors = ["Integritee AG"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/pallets/tests-utils/"
license = "Apache-2.0"
edition = "2018"
resolver = "2"

[dependencies]
log = { version = "0.4.14", default-features = false }
hex-literal = { version = "0.3.2" }
syn = "= 1.0.96" # TODO: Remove this as soon as frame-support-procedural-tools becomes compilable with latest syn version
primitive-types = { version = "0.11.1", features = ["scale-info"] }

[dependencies.teerex-primitives]
default-features = false
package = "teerex-primitives"
path = "../primitives/teerex"


[features]
default = ['std']
std = [
    "log/std",
    "teerex-primitives/std",
]