[package]
name = "teerex-primitives"
version = "0.1.0"
authors = ["Integritee AG"]
homepage = "https://integritee.network/"
repository = "https://github.com/integritee-network/pallets/"
license = "Apache-2.0"
edition = "2021"
resolver = "2"

[dependencies]
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '3.1.5'

[dependencies.ias-verify]
default-features = false
path = '../../teerex/ias-verify'

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.19"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.19"

[features]
default = ['std']
std = [
    'codec/std',
    'ias-verify/std',
    'scale-info/std',
    'sp-core/std',
    'sp-std/std',
]
